2022-01-11 Order, Item 등 Commit

--- a/book_shop/.gitignore
+++ b/book_shop/.gitignore
@@ -12,6 +12,10 @@ tmp/
 *~.nib
 # local.properties
 src/main/resources/application.yml
+
+# querydsl q-type
+build/generated/querydsl
+
 .settings/
 .loadpath
 .recommenders
